[gd_scene load_steps=2 format=3 uid="uid://h7xcghta0b3q"]

[ext_resource type="Script" uid="uid://cyo1bpmqrk04n" path="res://objects/RegiuneBase.gd" id="1_718ra"]

[node name="RegiuneBase" type="Area2D"]
script = ExtResource("1_718ra")

[node name="SpriteRegiune" type="Sprite2D" parent="."]
position = Vector2(404, 177)

[node name="CollisionRegiune" type="CollisionPolygon2D" parent="."]

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
